# Nodex

./: .gitignore  CONTEXT_DUMP.md  LICENSE  README.md  SECURITY.md  run.cmd  source_plan.md
backend/: __init__.py  pyproject.toml
backend/app/: __init__.py  api.py  approval_service.py  branching_service.py  codex_manager.py  codex_rpc.py  conversation_service.py  db.py  event_stream_service.py  import_service.py  lifecycle_service.py  main.py  maintenance_service.py  merge_context_service.py  models.py  notification_effects.py  response_history.py  schema_contract_service.py  security.py  session_policy.py  session_recovery.py  session_runtime.py  settings.py  temporary_preview_service.py  thread_params_service.py  thread_snapshot_service.py  turn_execution_service.py  turn_history.py  turn_record_service.py  util.py  ws.py
backend/tests/: fake_codex_cli.py  test_approval_service.py  test_branching_service.py  test_conversation_service.py  test_db_and_manager.py  test_event_stream_service.py  test_history_services.py  test_import_service.py  test_integration_harness.py  test_lifecycle_service.py  test_maintenance_service.py  test_merge_context_service.py  test_notification_effects.py  test_schema_contract_service.py  test_session_policy.py  test_session_recovery.py  test_session_runtime.py  test_temporary_preview_service.py  test_thread_params_service.py  test_thread_snapshot_service.py  test_turn_execution_service.py  test_turn_record_service.py
backend/tests/fixtures/schema/: ServerRequest.json
backend/tests/fixtures/schema/v2/: ThreadForkParams.json  (+1 more)
(+30 files in other folders)
