[project]
name = "codex-ui-wrapper"
version = "0.1.0"
description = "Local-only FastAPI wrapper and browser UI for codex app-server"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.9,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
